--- a/frontend/src/app/(main)/login/login.module.css
+++ b/frontend/src/app/(main)/login/login.module.css
@@ -1,6 +1,13 @@
 .background{
-    background-image: url(img3.jpg);
+    /* background-image: url(img3.jpg); */
+    background-image: linear-gradient(0deg);
     object-fit: cover;
-
 }
 
+.blur{
+    backdrop-filter: blur(10px);
+}
+
+.card{
+    /* background-color: #0000002e; */
+}
