--- a/frontend/src/app/admin/navbar.module.css
+++ b/frontend/src/app/admin/navbar.module.css
@@ -3,6 +3,8 @@
     padding-left: var(--mantine-spacing-md);
     padding-right: var(--mantine-spacing-md);
     border-bottom: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+    position: fixed;
+    top: 0;
   }
   
   .link {
