trying to add animation page

--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  background-image: url(https://www.reactjsindia.com/blog/wp-content/uploads/2024/03/Reactjs-for-Interactive-Web-Development-The-Business-Advantages.jpg);
+  background-image: url(https://bs-uploads.toptal.io/blackfish-uploads/components/blog_post_page/content/cover_image_file/cover_image/1283901/regular_1708x683_cover-0326-single-responsibility-principle-Waldek_Newsletter-77945de592c7da9204df01a390cfd43d.png);
   /* background: rgb(116,254,255); */
   /* background: radial-gradient(circle, rgb(117, 255, 255) 70%, rgb(92, 198, 255) 80%); */
   
