--- a/frontend/src/app/(main)/guides/sidebar.module.css
+++ b/frontend/src/app/(main)/guides/sidebar.module.css
@@ -1,6 +1,6 @@
 .navbar {
   background-color: light-dark(var(--mantine-color-white), var(--mantine-color-dark-6));
-  height: rem(800px);
+  height: rem(100vh);
   width: rem(300px);
   padding: var(--mantine-spacing-md);
   padding-bottom: 0;
@@ -33,4 +33,5 @@
   margin-left: calc(var(--mantine-spacing-md) * -1);
   margin-right: calc(var(--mantine-spacing-md) * -1);
   border-top: rem(1px) solid light-dark(var(--mantine-color-gray-3), var(--mantine-color-dark-4));
+  margin-top: auto;
 }
