--- a/frontend/src/app/features.module.css
+++ b/frontend/src/app/features.module.css
@@ -1,5 +1,6 @@
 .wrapper {
     padding: calc(var(--mantine-spacing-xl) * 2) var(--mantine-spacing-xl);
+    background-color: light-dark(var(--mantine-color-gray-0), var(--mantine-color-dark-6));
   }
   
   .title {
