--- a/frontend/src/app/user/faq/faq.module.css
+++ b/frontend/src/app/user/faq/faq.module.css
@@ -1,6 +1,6 @@
 .wrapper {
     padding-top: calc(var(--mantine-spacing-xl) * 2);
-    padding-bottom: calc(var(--mantine-spacing-xl) * 2);
+    padding-bottom: calc(var(--mantine-spacing-sm) * 2);
   }
   
   .title {
